apps/cli/crates/onequery-cli/src/snapshots/onequery__cli__tests__api_help_output_snapshot_targets_api_surface.snap
---
source: crates/onequery-cli/src/cli/../cli_tests.rs
expression: "rendered_display(&[\"onequery\", \"api\", \"--help\"])"
---
Describe or execute a connected source API

Usage: onequery api [OPTIONS] --source <SOURCE_KEY>
       onequery api [OPTIONS] --source <SOURCE_KEY> [<TARGET>]
       onequery api [OPTIONS] --source <SOURCE_KEY> --op <OPERATION> [<TARGET>]

Arguments:
  [TARGET]  Provide the selector or inferred operation target

Options:
      --source <SOURCE_KEY>    Describe or execute this connected source API
      --op <OPERATION>         Override the inferred source API operation
  -X, --method <METHOD>        Override the HTTP method for `http_request` operations
  -H, --header <KEY:VALUE>     Add one request header using `KEY:VALUE`
  -f, --raw-field <KEY=VALUE>  Add one string field patch using `KEY=VALUE`
  -F, --field <KEY=VALUE>      Add one typed field patch using `KEY=VALUE`
      --input <PATH|->         Read the request body from a file path or stdin (`-`)
      --paginate               Follow opaque source API pagination tokens
      --slurp                  Combine paginated JSON bodies into one array before rendering
      --max-pages <N>          Cap the number of paginated requests the client follows
  -i, --include                Include status and allowed response headers in text output
      --silent                 Suppress body output
  -q, --jq <EXPR>              Apply a JSON selection expression after response assembly
      --dry-run                Prepare the request and print its preview without executing it
  -h, --help                   Print help
  -V, --version                Print version

Global Options:
      --org <ORG_SLUG>           Override the active org for this invocation
  -c, --config <KEY=VALUE>       Apply a raw config override for this invocation using `key=value`
      --request-id <REQUEST_ID>  Attach a caller-supplied request ID to outbound API requests
      --timeout <SECONDS>        Override the request timeout in seconds for this invocation
      --output <OUTPUT>          Choose text or JSON output [possible values: text, json]
      --verbose                  Emit workflow progress and retry tracing to stderr
