apps/cli/crates/onequery-cli/src/snapshots/onequery__cli__tests__auth_help_output_snapshot_targets_auth_surface.snap
---
source: crates/onequery-cli/src/cli/../cli_tests.rs
assertion_line: 90
expression: "rendered_display(&[\"onequery\", \"auth\", \"--help\"])"
---
Manage authentication and stored sessions

Usage: onequery auth [OPTIONS] <COMMAND>

Commands:
  login    Start browser-based login and persist the resulting session
  import   Import one auth session payload from disk or stdin
  logout   Clear the stored auth session and active org selection
  whoami   Show the authenticated user and effective org context
  session  Inspect or manage the stored session lifecycle
  help     Print this message or the help of the given subcommand(s)

Options:
  -h, --help     Print help
  -V, --version  Print version

Global Options:
      --org <ORG_SLUG>           Override the active org for this invocation
      --profile <PROFILE>        Select a local auth/config profile for this invocation
  -c, --config <KEY=VALUE>       Apply a raw config override for this invocation using `key=value`
      --request-id <REQUEST_ID>  Attach a caller-supplied request ID to outbound API requests
      --timeout <SECONDS>        Override the request timeout in seconds for this invocation
      --json                     Emit machine-readable JSON output
      --text                     Emit human-readable text output
      --verbose                  Emit workflow progress and retry tracing to stderr
