apps/cli/crates/onequery-cli/src/snapshots/onequery__cli__tests__bare_doctor_report_renders_help_snapshot.snap
---
source: crates/onequery-cli/src/cli/../cli_tests.rs
expression: "rendered_display(&[\"onequery\", \"doctor\", \"report\"])"
---
Create a redacted diagnostic report from the latest saved failure

Usage: onequery doctor report [OPTIONS] <--last|--request-id <REQUEST_ID>>

Options:
      --last                     Use the latest saved diagnostics snapshot
      --request-id <REQUEST_ID>  Use the latest saved diagnostics snapshot when it matches this request ID
      --stdout                   Print the generated Markdown report to stdout instead of writing a file
      --open                     Open a GitHub issue draft in the browser after writing the report file
  -h, --help                     Print help
  -V, --version                  Print version

Global Options:
      --org <ORG_SLUG>      Override the active org for this invocation
  -c, --config <KEY=VALUE>  Apply a raw config override for this invocation using `key=value`
      --timeout <SECONDS>   Override the request timeout in seconds for this invocation
      --json                Emit machine-readable JSON output
      --verbose             Emit workflow progress and retry tracing to stderr
