apps/cli/crates/onequery-cli/src/snapshots/onequery__cli__tests__config_get_help_output_lists_supported_keys.snap
---
source: crates/onequery-cli/src/cli/../cli_tests.rs
assertion_line: 137
expression: "rendered_display(&[\"onequery\", \"config\", \"get\", \"--help\"])"
---
Read one effective CLI config value

Usage: onequery config get [OPTIONS] <KEY>

Arguments:
  <KEY>
          Select which config key to inspect

          Possible values:
          - org.active:              The active org slug used by default when `--org` is not supplied
          - api.server_url:          The default app origin used by API-facing commands
          - api.request_timeout_sec: The default request timeout in seconds for outbound API calls

Options:
  -h, --help
          Print help (see a summary with '-h')

  -V, --version
          Print version

Global Options:
      --org <ORG_SLUG>
          Override the active org for this invocation

      --profile <PROFILE>
          Select a local auth/config profile for this invocation

  -c, --config <KEY=VALUE>
          Apply a raw config override for this invocation using `key=value`

      --request-id <REQUEST_ID>
          Attach a caller-supplied request ID to outbound API requests

      --timeout <SECONDS>
          Override the request timeout in seconds for this invocation

      --json
          Emit machine-readable JSON output

      --text
          Emit human-readable text output

      --verbose
          Emit workflow progress and retry tracing to stderr
