apps/cli/crates/onequery-cli/src/snapshots/onequery__cli__tests__config_help_output_lists_get_and_set_surfaces.snap
---
source: crates/onequery-cli/src/cli/../cli_tests.rs
expression: "rendered_display(&[\"onequery\", \"config\", \"--help\"])"
---
Inspect and persist local CLI config values

Usage: onequery config [OPTIONS] <COMMAND>

Commands:
  get   Read one effective CLI config value
  set   Persist one supported CLI config value
  help  Print this message or the help of the given subcommand(s)

Options:
  -h, --help     Print help
  -V, --version  Print version

Global Options:
      --org <ORG_SLUG>           Override the active org for this invocation
  -c, --config <KEY=VALUE>       Apply a raw config override for this invocation using `key=value`
      --request-id <REQUEST_ID>  Attach a caller-supplied request ID to outbound API requests
      --timeout <SECONDS>        Override the request timeout in seconds for this invocation
      --output <OUTPUT>          Choose text or JSON output [possible values: text, json]
      --verbose                  Emit workflow progress and retry tracing to stderr
