apps/cli/crates/onequery-cli/src/snapshots/onequery__cli__tests__config_set_help_output_lists_writable_keys.snap
---
source: crates/onequery-cli/src/cli/../cli_tests.rs
expression: "rendered_display(&[\"onequery\", \"config\", \"set\", \"--help\"])"
---
Persist one supported CLI config value

Usage: onequery config set [OPTIONS] <KEY> <VALUE>

Arguments:
  <KEY>
          Select which config key to persist

          Possible values:
          - api.server_url:          The default app origin used by API-facing commands
          - api.request_timeout_sec: The default request timeout in seconds for outbound API calls

  <VALUE>
          Persist this value for the selected config key

Options:
  -h, --help
          Print help (see a summary with '-h')

  -V, --version
          Print version

Global Options:
      --org <ORG_SLUG>
          Override the active org for this invocation

  -c, --config <KEY=VALUE>
          Apply a raw config override for this invocation using `key=value`

      --request-id <REQUEST_ID>
          Attach a caller-supplied request ID to outbound API requests

      --timeout <SECONDS>
          Override the request timeout in seconds for this invocation

      --json
          Emit machine-readable JSON output

      --verbose
          Emit workflow progress and retry tracing to stderr
